# metadata

./: .gitignore  .gitmodules  Makefile  README.md  README_training.md  input_examples.jsonl  input_pipeline.py  metadata_processors.py  metadata_utils.py  playground.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_resolved_with_extras_and_dev.txt  script.sh  setup.cfg  setup.py  slurm_40.sh  test_metadata_utils.py  train.py
.github/workflows/: code_quality.yml  test.yml
bsmetadata/: evaluate.py  evaluation.py  evaluation_utils.py  input_pipeline.py  metadata_processors.py  metadata_utils.py  nb_plot.py  paragraph_by_metadata_html.py  plot_losses.py  post_processing_utils.py  post_proessing_utils.py  preprocessing_utils.py  train.py  utils.py
bsmetadata/build_dataset/: with_metadata.py
bsmetadata/deepspeed_configs/: v2.json
bsmetadata/experiments/: datasetv2.py  sample.py  with_metadata.py  with_metadata_and_baseline_val.py  with_metadata_datasetv2.py  with_metadata_datasetv2_tf.py  without_metadata.py
bsmetadata/hydra_configs/: html_config.yaml  test.yaml  v2.yaml
bsmetadata/preprocessing_scripts/: download_entity_processing_files.sh  download_wiki_dump.sh
bsmetadata/preprocessing_tools/: entity_desc_utils.py  website_desc_utils.py  wikipedia_desc_utils.py
bsmetadata/preprocessing_tools/html_parser/: __init__.py  filters_and_cleaners.py  objects.py  variables.py
conf/: config.yaml
conf/data_config/: data_config_toy_local.yaml  defaults_data_config.yaml
conf/metadata_args/: defaults_metadata_args.yaml
conf/model_args/: defaults_model_args.yaml
conf/training_args/: defaults_training_args.yaml
examples/build_dataset/: README.md  config.yaml  run_build_dataset_with_metadata.py
examples/get_dataloaders/: README.md  run_get_dataloaders.py
experiments/: sample.py  without_metadata.py
experiments/entity/jz/utils/: sync_wandb.slurm
experiments/gcp/dataset/c4/: README.md  tag_metadata.py  upload.sh
experiments/hpsearch/: test.sh
experiments/html/: example_script.sh  hash_investigate.txt  html_processor.py  start_training.py  test_html_processor.py
experiments/html/SLURM/crime_and_punish_test/: create_dataset.slurm  load_dataset.slurm
experiments/html/SLURM/experiment_1/: create_dataset.slurm  do_training.slurm  load_dataset.slurm  multi_steps.bash
experiments/html/SLURM/experiment_2/: README.md  create_dataset.slurm  do_training.slurm  load_dataset.slurm
experiments/html/SLURM/init_experiment/: create_dataset.slurm  do_training.slurm  load_dataset.py  load_dataset.slurm
experiments/html/SLURM/loading_scripts/: load_tokenizer_and_model.py  load_tokenizer_and_model.slurm
experiments/html/SLURM/squad_test/: create_dataset.slurm  load_dataset.slurm
experiments/jz/: README.md
experiments/jz/dataset/c4/: 00_create_toy_c4_dataset.slurm  01_add_metadata_to_toy_c4_dataset.slurm  02_add_metadata_to_toy_c4_dataset.slurm  README.md  multistep_dataset_creation.sh
experiments/jz/dataset/c4/c4-en-html-deduped-full/: 00_import_c4.slurm  01_add_metadata.slurm  01_add_metadata_to_toy_c4_dataset.slurm  02_add_website_desc.slurm  03_recreate_arrow_dataset.slurm  export_to_jsonlines.slurm  post_process_website_desc.slurm  process_website_desc.slurm  push_to_hub.slurm
experiments/jz/dataset/c4/c4-en-v2/: 00_import_c4.slurm  01_add_metadata_to_toy_c4_dataset.slurm  02_add_website_desc.slurm  02_gzip.slurm  03_add_entities.slurm  04_recreate_arrow_dataset.slurm  05_add_entitiies_v2.slurm  06_shard_ds.slurm  07_add_entitiies_v3.slurm  08_add_entitiies_batch_2.slurm  09_add_entitiies_batch_1_2_retry.slurm  10_add_entitiies_batch_1_2_retry_2.slurm  11_add_entitiies_batch_1_2_retry_oom.slurm  11_add_entitiies_batch_2_retry_oom.slurm  12_add_entitiies_batch_1_retry_oom.slurm  13_add_entitiies_batch_2_retry_oom_2.slurm  14_add_entitiies_batch_2_retry_oom_3.slurm  15_add_entitiies_batch_2_retry_oom_4.slurm  16_add_entitiies_batch_2_retry_oom_5.slurm  README.md  (+4 more)
experiments/jz/html/exp_1/: html_processor.py  start_training.py  test_html_processor.py
experiments/jz/joint_training_toy/joint_training_toy1/: 01_load_tokenizer_and_model.slurm  02_load_dataset.slurm  03_create_dataset.slurm  04_do_training.slurm
experiments/jz/joint_training_toy/joint_training_toy2-fp16/: 01_load_tokenizer_and_model.slurm  03_create_dataset.slurm  04_do_training.slurm  README.md
experiments/jz/joint_training_toy/joint_training_toy3-fp16-multigpu/: 03_create_dataset.slurm  04_do_training.slurm  local_test.sh
experiments/jz/joint_training_toy/joint_training_toy4-test-gpt2-xl/: 04_do_training.slurm  local_test.sh
experiments/jz/toy_experiments/: README.md
experiments/jz/toy_experiments/dumpdb/: dumpdb.py  dumpdb.slurm  dumpdb_full.slurm
experiments/jz/utils/: convert_checkpoint_to_hf_format.py
experiments/jz/utils/loading_script_utils/: load_dataset.py  load_tokenizer_and_model.py
experiments/jz/website_metadata/toy_example/: 02_load_dataset.slurm  03_create_dataset.slurm
experiments/jz_template/: README.md
experiments/jz_template/SLURM/experiment_example/: 01_load_tokenizer_and_model.slurm  03_create_dataset.slurm  multi_steps.bash
experiments/jz_template/SLURM/experiment_template/: 01_load_tokenizer_and_model.slurm  02_load_dataset.slurm  04_do_training.slurm
experiments/shared_tips/: upload_custom_dataset_on_the_hub.md
metadata/: input_pipeline.py  metadata_processors.py  metadata_utils.py  train.py
metadata/experiments/: arxiv_time.py  sample.py  with_metadata.py  without_metadata.py
perso/: bart_state_dict.txt
tests/: test_datasource_preprocessor.py  test_entity_preprocessor.py  test_get_dataloaders.py  test_get_paragraphs.py  test_length_preprocessor.py  test_metadata_utils.py  test_parse_date.py  test_preprocessing_utils.py  test_train.py  test_website_post_processor.py
tests/data/: train_toy_wikitext.jsonl  train_toy_wikitext_with_metadata.jsonl  val_toy_raw_wikitext.jsonl  val_toy_wikitext_with_metadata.jsonl
tests/mocks/: dump_db.py  mock_dump_db.py
tests/preprocessing_tools/html_parser/: test_html_parser.py
(+86 files in other folders)
