[tool.black]
line-length = 119
target-version = ['py37']

[tool.poetry]
name = "metadata"
version = "0.1.0"
description = "Codebase for including metadata (e.g., URLs, timestamps, HTML tags) during language model pretraining."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.11, <3.10"
torch = "1.8.1"  # 1.9 also works for Colab TPU, but not for GPU/CPU; the bugfix of 1.8.2 seems irrelevant for now.
hydra-core = ">=1.1,<1.2"  # Poetry will likely update it to 1.1.1, but it is probably ok and good for bugfixes.
wandb = ">=0.10.32,<1"  # Poetry will likely update it to 0.12.1, but it is probably ok and good for bugfixes.
transformers = "^4.6.0"  # Poetry will likely update it to 4.10.0, but it is probably ok and good for bugfixes.
accelerate = ">=0.4.0,<1"  # We may want to use 0.5.0 in the near future
datasets = {extras = ["streaming"], version = "^1.11.0"}

[tool.poetry.dev-dependencies]
isort = "^5.5.4"
black = "^21.4b0"
flake8 = "^3.8.3"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"
